Refactor/fixes/PB service improvements. Workout creation from program. Home: program progress, copy. Program: week/day progress tags. Hook for validation so only 1 workout may be active. Continue footer w timer badge.

--- a/client/src/app/exercise-selector/exercise-selector.component.html
+++ b/client/src/app/exercise-selector/exercise-selector.component.html
@@ -28,7 +28,7 @@
                     </div>
                 </ion-note>
             </ion-label>
-            <ion-checkbox slot="end" [(ngModel)]="exercise.selected"></ion-checkbox>
+            <ion-checkbox slot="end" [(ngModel)]="exercise.selected" (click)="toggleExercise(exercise)"></ion-checkbox>
         </ion-item>
         }
         @if (filteredExercises.length === 0) {
