--- a/client/src/app/form/exercise-form/exercise-form.component.scss
+++ b/client/src/app/form/exercise-form/exercise-form.component.scss
@@ -34,28 +34,6 @@
             margin-left: 10px;
         }
     }
-
-    .rep-row {
-        display: flex;
-        align-items: center;
-        padding: 12px 8px;
-        border-radius: 8px;
-        background-color: var(--ion-color-light);
-        position: relative;
-        cursor: pointer;
-
-        .set-display-container {
-            display: flex;
-            align-items: center;
-            gap: 4px;
-
-            .rep-current-value {
-                display: flex;
-                margin-right: auto;
-                gap: 4px;
-            }
-        }
-    }
 }
 
 .set-number {
@@ -83,27 +61,41 @@ ion-col {
     display: flex;
 }
 
-.exercise-settings-container {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-
-    ion-button:last-child {
-        --padding-end: 0px
-    }
-}
-
 .exercise-item {
     // padding: 10px 0px;
     --padding-start: 0;
     border-bottom: none !important;
 
-    .title {
+    .exercise-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
         padding-bottom: 10px;
+        margin-bottom: 2px;
+
+        ion-button:last-child {
+            --padding-end: 0px
+        }
+
+        .exercise-actions {
+            display: flex;
+        }
+    }
+
+    .exercise-settings-container {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+
+        ion-button:last-child {
+            --padding-end: 0px
+        }
+    }
+
+    .title {
         margin-left: 0;
         margin-right: 0;
         margin-top: 0;
-        margin-bottom: 2px;
         font-size: 1.0625rem;
         font-weight: normal;
     }
@@ -153,6 +145,35 @@ ion-item.rep-row {
     --background: transparent;
     border-bottom: none;
     margin: 0px;
+
+    display: flex;
+    align-items: center;
+    border-radius: 8px;
+    background-color: var(--ion-color-light);
+    position: relative;
+    cursor: pointer;
+
+
+    &::part(native) {
+        padding: 10px 8px;
+    }
+
+    .rep-row-container {
+        display: flex;
+        flex-grow: 1;
+        align-items: center;
+
+        .set-display-container {
+            display: flex;
+            align-items: center;
+            gap: 4px;
+
+        }
+    }
+
+    ion-checkbox {
+        flex: 0;
+    }
 
     ion-icon {
         font-size: 1rem;
