--- a/client/src/app/home/home.page.html
+++ b/client/src/app/home/home.page.html
@@ -113,6 +113,21 @@
                                     {{ program.numberOfWeeks || 'N/A' }} {{ 'weeks' | translate }}
                                 </span>
                             </div>
+
+                            @if(program.started) {
+                            <div class="progress-container">
+                                <div class="progress-bar">
+                                    <div class="progress-fill"
+                                        [style.width.%]="(program.completedDaysCount / program.totalDaysCount) * 100">
+                                    </div>
+                                </div>
+                                <span class="progress-text">
+                                    {{ program.completedDaysCount }}/{{ program.totalDaysCount }} {{ 'days_completed' |
+                                    translate }}
+                                </span>
+                            </div>
+                            }
+
                             <ion-note>{{ program.description || ('no_description' | translate) }}</ion-note>
                             @if (program.tags?.length > 0) {
                             <div class="tag-container">
@@ -123,11 +138,11 @@
                             }
                         </ion-label>
                     </ion-item>
-                    <ion-item-options side="start">
+                    <!-- <ion-item-options side="start">
                         <ion-item-option color="primary" (click)="presentAssignProgramPopover(program)">
                             <ion-icon slot="icon-only" name="person-add"></ion-icon>
                         </ion-item-option>
-                    </ion-item-options>
+                    </ion-item-options> -->
 
                     <ion-item-options side="end">
                         <ion-item-option color="danger" (click)="deleteProgram(program.id)">
@@ -200,3 +215,5 @@
         </span>
     </div>
 </ng-template>
+
+<app-continue-footer></app-continue-footer>
