--- a/client/src/app/shared/continue-footer/continue-footer.component.html
+++ b/client/src/app/shared/continue-footer/continue-footer.component.html
@@ -1,7 +1,7 @@
 @if (workout) {
 <ion-footer class="bg_transparent" class="ion-padding-x">
-    <app-rest-badge [initialTime]="lastCompletedSetExercise?.completedAt" #restBadge
-        (onRestSkippedEvent)="onRestSkipped()" [duration]="lastCompletedSetExercise?.restDuration"></app-rest-badge>
+    <app-rest-badge [initialTime]="lastCompletedSet?.completedAt" #restBadge (onRestSkippedEvent)="onRestSkipped()"
+        [duration]="lastCompletedSetExercise?.restDuration"></app-rest-badge>
 
     @if (!restBadge.isResting && !timerOnly()) {
     <ion-button size="large" expand="round" shape="round" color="primary" (click)="navToActiveWorkout()">
