--- a/client/src/app/workout/workout.component.html
+++ b/client/src/app/workout/workout.component.html
@@ -15,17 +15,11 @@
             <ion-item lines="none" class="day-item" formArrayName="exercises">
                 <ion-label>
                     @for (exercise of exercisesArray.controls; track $index; let exIndex = $index) {
-                    <ion-item-sliding>
-                        <ion-item lines="none" [formGroupName]="exIndex" class="ion-no-border">
-                            <app-exercise-form [style.width]="'100%'" [exercise]="exercise">
-                            </app-exercise-form>
-                        </ion-item>
-                        <ion-item-options side="end">
-                            <ion-item-option color="danger" (click)="removeExercise(exIndex)">
-                                <ion-icon slot="icon-only" name="trash"></ion-icon>
-                            </ion-item-option>
-                        </ion-item-options>
-                    </ion-item-sliding>
+                    <ion-item lines="none" [formGroupName]="exIndex" class="ion-no-border">
+                        <app-exercise-form [style.width]="'100%'" [exercise]="exercise"
+                            (onRemoveExerciseEvent)="removeExercise(exIndex)">
+                        </app-exercise-form>
+                    </ion-item>
                     }
                     @empty {
                     <ion-label class="ion-text-center ion-padding" [color]="'medium'">
