--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -124,3 +124,19 @@ ion-input {
     z-index: 9999;
     background-color: var(--ion-color-background);
 }
+
+.no-backdrop {
+    backdrop-filter: unset;
+}
+
+.notes {
+    background-color: rgba(var(--ion-color-secondary-rgb), 0.1);
+    padding: 12px;
+    border-radius: 8px;
+    margin: 10px 0px;
+
+    ion-icon {
+        vertical-align: middle;
+        margin-right: 8px;
+    }
+}
