Workouts hook fix (oncreate, not onupdate). Continue footer/rest set fetch fix (sort by completedAt, not updated). Program and template service for shared actions on list and detail components. Exercise template scroll to top, clear all filters fix (added in header toolbar, footer buttons do not work and lag?).

--- a/client/src/app/exercise-template/exercise-template-filter-modal/exercise-template-filter-modal.component.html
+++ b/client/src/app/exercise-template/exercise-template-filter-modal/exercise-template-filter-modal.component.html
@@ -1,6 +1,11 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title> {{ 'filter' | translate }}</ion-title>
+        <ion-buttons slot="start">
+            <ion-button fill="clear" (click)="clearAllFilters()">
+                <ion-icon name="refresh-outline"></ion-icon>
+                {{ 'clear_all_filters' | translate}}
+            </ion-button>
+        </ion-buttons>
         <ion-buttons slot="end">
             <ion-button (click)="cancel()">{{'cancel' | translate }}</ion-button>
             <ion-button (click)="applyFilters()" [strong]="true" color="primary">
@@ -10,7 +15,7 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding-x">
+<ion-content class="ion-padding-x" #content>
     <div class="filter-section">
         <ion-item>
             <ion-label>
@@ -112,12 +117,3 @@
         </ion-grid>
     </div>
 </ion-content>
-
-<ion-footer>
-    <ion-toolbar>
-        <ion-button expand="full" fill="clear" (click)="clearAllFilters()">
-            <ion-icon name="refresh-outline"></ion-icon>
-            {{ 'clear_all_filters' | translate}}
-        </ion-button>
-    </ion-toolbar>
-</ion-footer>
