--- a/client/src/app/home/home.page.html
+++ b/client/src/app/home/home.page.html
@@ -103,8 +103,8 @@
         <ng-container *ngSwitchCase="'programs'">
             <ion-list>
                 @for (program of programs; track program.id) {
-                <ion-item-sliding>
-                    <ion-item [button]="true" (click)="presentProgramActionSheet(program)" class="">
+                <ion-item-sliding class="animate__animated animate__fadeInUp">
+                    <ion-item [button]="true" (click)="presentProgramActionSheet(program)">
                         <ion-label>
                             <div>
                                 <h2>{{ program.name || ('program' | translate) }}</h2>
@@ -159,7 +159,7 @@
         <ng-container *ngSwitchCase="'templates'">
             <ion-list>
                 @for (template of templates; track template.exercises.length) {
-                <ion-item-sliding>
+                <ion-item-sliding class="animate__animated animate__fadeInUp">
                     <ion-item [button]="true" (click)="presentTemplateActionSheet(template)">
                         <ion-label>
                             <h2> {{ template.name ?? ('template' | translate) }} ({{ template.exercises.length
